delete winrate and fix endline

--- a/blackjack_app/templates/blackjack_app/profile.html
+++ b/blackjack_app/templates/blackjack_app/profile.html
@@ -10,9 +10,8 @@
     <p>Games Played: {{ games_played }}</p>
     <p>Games Won: {{ games_won }}</p>
     <p>Games Lost: {{ games_lost }}</p>
-    <p>Win Rate: {{ win_rate }}%</p>
     <a href="{% url 'home' %}" class="btn btn-info">Back to Home</a>
-    <a href="{% url 'start_game' %}" class="btn btn-success">Start New Game</go>
+    <a href="{% url 'start_game' %}" class="btn btn-success">Start New Game</a>
     <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
 
 </div>
