--- a/blackjack_app/templates/blackjack_app/base.html
+++ b/blackjack_app/templates/blackjack_app/base.html
@@ -9,8 +9,7 @@
         <a class="navbar-brand" href="{% url 'home' %}">Blackjack Game</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                {% if user.is_authenticated %}
-                    {% if not user.win %}
+                {% if user.is_authenticated and not user.win and not user.in_game %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">Home</a>
                     </li>
@@ -20,7 +19,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
-                    {% endif %}
                 {% endif %}
             </ul>
         </div>
