feat: Refactor navbar links in base.html for authenticated users
Refactor the navbar links in base.html to only display certain links when the user is authenticated and not in a game. This improves the user experience by showing relevant navigation options based on the user's authentication status and game state.

--- a/blackjack_app/templates/blackjack_app/base.html
+++ b/blackjack_app/templates/blackjack_app/base.html
@@ -3,21 +3,35 @@
 <head>
     <title>Blackjack Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .disabled-link {
+            pointer-events: none;
+            color: red;
+            background-color: #f8d7da;
+            text-decoration: line-through;
+            border-radius: 4px;
+            padding: 5px 10px;
+        }
+        .disabled-link:hover::after {
+            content: ' (Disabled during game)';
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home' %}">Blackjack Game</a>
+        <a class="navbar-brand">Blackjack Game</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                {% if user.is_authenticated and not user.win and not user.in_game %}
+                {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if in_game %}disabled-link{% endif %}" href="{% if not in_game %}{% url 'home' %}{% endif %}" title="{% if in_game %}Disabled during game{% endif %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">View Profile & Stats</a>
+                        <a class="nav-link {% if in_game %}disabled-link{% endif %}" href="{% if not in_game %}{% url 'profile' %}{% endif %}" title="{% if in_game %}Disabled during game{% endif %}">View Profile & Stats</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link {% if in_game %}disabled-link{% endif %}" href="{% if not in_game %}{% url 'logout' %}{% endif %}" title="{% if in_game %}Disabled during game{% endif %}">Logout</a>
                     </li>
                 {% endif %}
             </ul>
